--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -61,6 +61,7 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+  overflow: hidden;
 }
 
 .project__info {
@@ -85,8 +86,15 @@
   text-align: center;
 }
 
+@media screen and (max-width: 750px) {
+  .project__card {
+    margin-top: 10vh;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .project__card {
+    margin-top: 0;
     width: 90vw;
     height: 80vh;
     display: grid;
